fixed self.attributes in Result

--- a/backend/v0_2/dev.ipynb
+++ b/backend/v0_2/dev.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "ae026330",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "0.9896853361997735"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1917,6 +1917,283 @@
    ],
    "source": [
     "df.BeginISODate[(df.BeginISODate > 1500)].hist(bins=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85060f38",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Fixing Strange x-Axis Data Issue "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ab07dbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://sabio.diginfra.nl/api/v1/objects/<datasetID>/search/%7B%22objectKeywords%22%3A%22hengelo%22%2C%22objectStartDate%22%3A%22%22%2C%22objectEndDate%22%3A%22%22%2C%22objectParams%22%3A[%7B%22id%22%3A%22Classification%22%2C%22value%22%3A%22%22%7D%2C%7B%22id%22%3A%22Department%22%2C%22value%22%3A%22%22%7D]%2C%22engineId%22%3A%22RandomEnginev0%22%2C%22engineMinScore%22%3A0%2C%22engineMaxScore%22%3A1%2C%22engineParams%22%3A[%7B%22id%22%3A0%2C%22value%22%3A%22useless1%22%7D]%2C%22vocabularyTerms%22%3A%22bewindhebber%2Cbewindvoerder%2Cbomba%2Cbombay%2Ccimarron%2Cderde%20wereld%2Cdwerg%2Cexpeditie%2Cgouverneur%2Chalfbloed%2Chottentot%2Cinboorling%2Cindiaan%2Cindisch%2Cindo%2Cinheems%2Cinlander%2Cjap%2Cjappen%2Cjappenkampen%2Ckaffer%2Ckaffir%2Ckafir%2Ckoelie%2Ckolonie%2Clagelonenland%2Clandhuis%2Cmarron%2Cmarronage%2Cmissie%2Cmissionaris%2Cmoor%2Cmoors%2Cmoren%2Cmulat%2Coctroon%2Contdekken%2Contdekking%2Contdekkingsreis%2Contwikkelingsland%2Coorspronkelijk%2Coosters%2Copperhoofd%2Cori%C3%ABntaals%2Cpinda%2Cpolitionele%20actie%2Cprimitief%2Cprimitieven%2Cpygmee%2Cras%2Crasch%2Cslaaf%2Cstam%2Cstamhoofd%2Ctraditioneel%2Ctropisch%2Cwesters%2Cwilden%2Czendeling%2Czendelingen%2Czending%22%7D/scatterplot/1/405100?api=https%3A%2F%2Fsabio.diginfra.net%2Fapi%2Fv1%2F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f31aade1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://sabio.diginfra.nl/api/v1/engines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f90ab596",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://sabio.diginfra.net/api/v1/objects/NMvW_v0/search?object_keywords=hengelo&object_start_date=&object_end_date=&engine_id=RandomEnginev0&engine_min_score=0&engine_max_score=1&vocabulary_terms=bewindhebber%2Cbewindvoerder%2Cbomba%2Cbombay%2Ccimarron%2Cderde%20wereld%2Cdwerg%2Cexpeditie%2Cgouverneur%2Chalfbloed%2Chottentot%2Cinboorling%2Cindiaan%2Cindisch%2Cindo%2Cinheems%2Cinlander%2Cjap%2Cjappen%2Cjappenkampen%2Ckaffer%2Ckaffir%2Ckafir%2Ckoelie%2Ckolonie%2Clagelonenland%2Clandhuis%2Cmarron%2Cmarronage%2Cmissie%2Cmissionaris%2Cmoor%2Cmoors%2Cmoren%2Cmulat%2Coctroon%2Contdekken%2Contdekking%2Contdekkingsreis%2Contwikkelingsland%2Coorspronkelijk%2Coosters%2Copperhoofd%2Cori%C3%ABntaals%2Cpinda%2Cpolitionele%20actie%2Cprimitief%2Cprimitieven%2Cpygmee%2Cras%2Crasch%2Cslaaf%2Cstam%2Cstamhoofd%2Ctraditioneel%2Ctropisch%2Cwesters%2Cwilden%2Czendeling%2Czendelingen%2Czending&object_param_Classification=&object_param_Department=&engine_param_0=useless1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d13055c",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8c8312b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.results import Result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "57b589c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_names = [\"Department\", \"Classification\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "68f376e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attributes = [\"BeginISODate\", \"EndISODate\"] \n",
+    "attributes = attributes + param_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5b19339b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BeginISODate</th>\n",
+       "      <th>EndISODate</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Classification</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ObjectID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Insulair Zuidoost-Azië</td>\n",
+       "      <td>Materiële cultuurcollectie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1850</td>\n",
+       "      <td>1958</td>\n",
+       "      <td>Insulair Zuidoost-Azië</td>\n",
+       "      <td>Materiële cultuurcollectie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>Insulair Zuidoost-Azië</td>\n",
+       "      <td>Materiële cultuurcollectie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>(regio niet-specifiek)</td>\n",
+       "      <td>Materiële cultuurcollectie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1850</td>\n",
+       "      <td>1958</td>\n",
+       "      <td>(niet toegekend)</td>\n",
+       "      <td>Materiële cultuurcollectie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1140716</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Zuidwest- en Centraal-Azië</td>\n",
+       "      <td>Audiovisuele collectie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1140717</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Zuidwest- en Centraal-Azië</td>\n",
+       "      <td>Audiovisuele collectie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1140718</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Zuidwest- en Centraal-Azië</td>\n",
+       "      <td>Audiovisuele collectie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1140719</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Zuidwest- en Centraal-Azië</td>\n",
+       "      <td>Audiovisuele collectie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1140720</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Zuidwest- en Centraal-Azië</td>\n",
+       "      <td>Audiovisuele collectie</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>579927 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          BeginISODate  EndISODate                  Department  \\\n",
+       "ObjectID                                                         \n",
+       "1                    0        2011      Insulair Zuidoost-Azië   \n",
+       "2                 1850        1958      Insulair Zuidoost-Azië   \n",
+       "3                    0        2009      Insulair Zuidoost-Azië   \n",
+       "4                    0        2011      (regio niet-specifiek)   \n",
+       "5                 1850        1958            (niet toegekend)   \n",
+       "...                ...         ...                         ...   \n",
+       "1140716              0           0  Zuidwest- en Centraal-Azië   \n",
+       "1140717              0           0  Zuidwest- en Centraal-Azië   \n",
+       "1140718              0           0  Zuidwest- en Centraal-Azië   \n",
+       "1140719              0           0  Zuidwest- en Centraal-Azië   \n",
+       "1140720              0           0  Zuidwest- en Centraal-Azië   \n",
+       "\n",
+       "                      Classification  \n",
+       "ObjectID                              \n",
+       "1         Materiële cultuurcollectie  \n",
+       "2         Materiële cultuurcollectie  \n",
+       "3         Materiële cultuurcollectie  \n",
+       "4         Materiële cultuurcollectie  \n",
+       "5         Materiële cultuurcollectie  \n",
+       "...                              ...  \n",
+       "1140716       Audiovisuele collectie  \n",
+       "1140717       Audiovisuele collectie  \n",
+       "1140718       Audiovisuele collectie  \n",
+       "1140719       Audiovisuele collectie  \n",
+       "1140720       Audiovisuele collectie  \n",
+       "\n",
+       "[579927 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[attributes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "63c86d84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = df[attributes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5f45d80b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() missing 4 required positional arguments: 'scores', 'score_details', 'min_score', and 'max_score'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-93c8036bd253>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mResult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam_names\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m r = Result(param_names=param_names, rows=df, scores=np.zeros(len(df)), \n\u001b[1;32m      4\u001b[0m                  score_details=df, min_score=0., max_score=1.)\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 4 required positional arguments: 'scores', 'score_details', 'min_score', and 'max_score'"
+     ]
+    }
+   ],
+   "source": [
+    "r = Result(param_names, df, )\n",
+    "\n",
+    "r = Result(param_names=param_names, rows=df, scores=np.zeros(len(df)), \n",
+    "                 score_details=df, min_score=0., max_score=1.)"
    ]
   }
  ],
