small changes in RandomEngine

--- a/backend/v0_2/dev.ipynb
+++ b/backend/v0_2/dev.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "c01ef6d8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
@@ -1921,7 +1922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85060f38",
+   "id": "e781ea0a",
    "metadata": {},
    "source": [
     "---\n",
@@ -1931,7 +1932,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ab07dbc",
+   "id": "57ca01fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1941,7 +1942,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f31aade1",
+   "id": "8a8c303d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1951,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f90ab596",
+   "id": "4b4f73dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1960,7 +1961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d13055c",
+   "id": "d9316c16",
    "metadata": {},
    "source": [
     "---"
@@ -1969,7 +1970,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8c8312b9",
+   "id": "b4c3fb6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1979,7 +1980,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "57b589c3",
+   "id": "6fca0637",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1989,7 +1990,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "68f376e9",
+   "id": "70a0f41a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2000,7 +2001,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5b19339b",
+   "id": "c0a20316",
    "metadata": {},
    "outputs": [
     {
@@ -2164,7 +2165,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "63c86d84",
+   "id": "520359b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2173,27 +2174,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "5f45d80b",
+   "execution_count": 14,
+   "id": "06d6cddd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = Result(param_names=param_names, rows=df, scores=np.zeros(len(df)), \n",
+    "                 score_details=df, min_score=0., max_score=1.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6cc8d3cb",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 4 required positional arguments: 'scores', 'score_details', 'min_score', and 'max_score'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-93c8036bd253>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mResult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam_names\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m r = Result(param_names=param_names, rows=df, scores=np.zeros(len(df)), \n\u001b[1;32m      4\u001b[0m                  score_details=df, min_score=0., max_score=1.)\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 4 required positional arguments: 'scores', 'score_details', 'min_score', and 'max_score'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BeginISODate</th>\n",
+       "      <th>EndISODate</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ObjectID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1850</td>\n",
+       "      <td>1958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1850</td>\n",
+       "      <td>1958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1140716</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1140717</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1140718</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1140719</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1140720</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>579927 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          BeginISODate  EndISODate\n",
+       "ObjectID                          \n",
+       "1                    0        2011\n",
+       "2                 1850        1958\n",
+       "3                    0        2009\n",
+       "4                    0        2011\n",
+       "5                 1850        1958\n",
+       "...                ...         ...\n",
+       "1140716              0           0\n",
+       "1140717              0           0\n",
+       "1140718              0           0\n",
+       "1140719              0           0\n",
+       "1140720              0           0\n",
+       "\n",
+       "[579927 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "r = Result(param_names, df, )\n",
-    "\n",
-    "r = Result(param_names=param_names, rows=df, scores=np.zeros(len(df)), \n",
-    "                 score_details=df, min_score=0., max_score=1.)"
+    "r.values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02262869",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Keyword Search Dev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2b0f781a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kws = \"Maarten Sint\"\n",
+    "prep_kws = \"|\".join(kws.lower().replace(\", \", \",\").split(\",\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c6c454c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'maarten sint'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prep_kws"
    ]
   }
  ],
