added redo param to RandomEngine

--- a/backend/v0_2/dev.ipynb
+++ b/backend/v0_2/dev.ipynb
@@ -1922,7 +1922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e781ea0a",
+   "id": "a9a93306",
    "metadata": {},
    "source": [
     "---\n",
@@ -1932,7 +1932,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57ca01fc",
+   "id": "cf642f51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1942,7 +1942,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a8c303d",
+   "id": "b3bc8bc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1952,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b4f73dd",
+   "id": "5e228b37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1961,7 +1961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9316c16",
+   "id": "637de751",
    "metadata": {},
    "source": [
     "---"
@@ -1970,7 +1970,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b4c3fb6d",
+   "id": "d132e558",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1980,7 +1980,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6fca0637",
+   "id": "3c191480",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1990,7 +1990,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "70a0f41a",
+   "id": "59194316",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2001,7 +2001,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c0a20316",
+   "id": "e3b7f825",
    "metadata": {},
    "outputs": [
     {
@@ -2165,7 +2165,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "520359b8",
+   "id": "888fb183",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2175,7 +2175,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "06d6cddd",
+   "id": "bf8f5b6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2186,7 +2186,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6cc8d3cb",
+   "id": "42c37148",
    "metadata": {},
    "outputs": [
     {
@@ -2309,7 +2309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02262869",
+   "id": "ead90626",
    "metadata": {},
    "source": [
     "---\n",
@@ -2319,7 +2319,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2b0f781a",
+   "id": "e7c8ced2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2330,7 +2330,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c6c454c9",
+   "id": "cd7a855c",
    "metadata": {},
    "outputs": [
     {
@@ -2346,6 +2346,56 @@
    ],
    "source": [
     "prep_kws"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e8637e3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = dict(a=)\n",
+    "\n",
+    "d.get(\"a\", False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "3f97e527",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__main__.f() got multiple values for keyword argument 'a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-f26ff8edbe9a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m13\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: __main__.f() got multiple values for keyword argument 'a'"
+     ]
+    }
+   ],
+   "source": [
+    "def f(**kwargs):\n",
+    "    print(kwargs)\n",
+    "    \n",
+    "    \n",
+    "d = dict(a=13)\n",
+    "f(a=0, **d)"
    ]
   }
  ],
