engines now with saving and loading

--- a/backend/v0_2/dev.ipynb
+++ b/backend/v0_2/dev.ipynb
@@ -364,28 +364,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4d906e27",
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.datasets import NMvW\n",
-    "from src.engines.TypicalityEnginev0_2 import Typicality, TypicalityEngine\n",
+    "from src.engines.TypicalityEnginev0 import Typicality, TypicalityEngine\n",
     "\n",
     "NMvW.data = NMvW.data.iloc[:10000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4cadf40c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)-grams: Padding documents...: 100%|████████████████████████████████| 20000/20000 [00:00<00:00, 1353372.38it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)-grams: Term Document Matrix constructed...\n",
+      "(2, 3)-grams: Term frequencies precomputed...\n",
+      "(2, 3)-grams: Init done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████| 113897/113897 [00:00<00:00, 400177.46it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████| 190339/190339 [00:00<00:00, 407851.13it/s]\n",
+      "(0, 1)-grams: Padding documents...: 100%|████████████████████████████████| 20000/20000 [00:00<00:00, 1945635.63it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1)-grams: Term Document Matrix constructed...\n",
+      "(0, 1)-grams: Term frequencies precomputed...\n",
+      "(0, 1)-grams: Init done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████| 23454/23454 [00:00<00:00, 396602.19it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████| 10000/10000 [00:10<00:00, 985.67it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "typE = TypicalityEngine(id_=\"TypicalityEnginev0\",\n",
     "                           name=\"TypicalityEngine/v0\",\n",
     "                           dataset=NMvW,\n",
-    "                           params=[])\n"
+    "                           params=[],\n",
+    "                       from_saved=False)"
    ]
   },
   {
@@ -430,6 +474,78 @@
    "source": [
     "import joblib\n",
     "joblib.dump(typE.typicality, \"test.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ac82489",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "joblib.dump(typE, \"test.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51432207",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7e6726a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "typ2 = joblib.load(\"test.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "21de9abc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts = NMvW.data.sample(frac=0.3).fillna(\"\")\n",
+    "typs2, details2 = typ2.score_and_detail(texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "51b2caa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "typs, details = typE.score_and_detail(texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ead5dd63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3000"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(typs == typs2)"
    ]
   }
  ],
