--- a/backend/v0_2/dev.ipynb
+++ b/backend/v0_2/dev.ipynb
@@ -141,8 +141,12 @@
     "---\n",
     "# Dates\n",
     "\n",
-    " 1. make all dates at least 1 (because python cannot\n",
-    " "
+    " 1. make all dates at least 1 (because python cannot deal with years <= 0)  \n",
+    "    (or drop non-positive dates)  \n",
+    "    (drop objects with EndISODate <= 0 in any case (doesn't make any sense))  \n",
+    " \n",
+    " 2. convert all year values to %Y-%m-%d format (expected by Werner's API)  \n",
+    "    (by using datetime.strptime; allows comparison with > )  "
    ]
   },
   {
@@ -175,6 +179,49 @@
    "outputs": [],
    "source": [
     "df.BeginISODate[(df.BeginISODate > 1500)].hist(bins=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1f953c7",
+   "metadata": {},
+   "source": [
+    "### 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17a2dd5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df.EndISODate > 0]\n",
+    "\n",
+    "# drop\n",
+    "df = df[df.BeginISODate > 0]\n",
+    "\n",
+    "# change\n",
+    "df[\"BeginISODate\"] = df.BeginISODate.replace(0, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37c94817",
+   "metadata": {},
+   "source": [
+    "### 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96ceec1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"start_date\"] = df.BeginISODate.astype(str).str.zfill(4).apply(lambda s: dt.strptime(s, \"%Y\"))\n",
+    "df[\"end_date\"] = df.EndISODate.astype(str).str.zfill(4).apply(lambda s: dt.strptime(s, \"%Y\"))"
    ]
   },
   {
