bringing remote to same point as local

--- a/backend/v0_4/dev_response.ipynb
+++ b/backend/v0_4/dev_response.ipynb
@@ -57,7 +57,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "3dad0089",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "ename": "ValueError",
@@ -84,6 +86,22 @@
    ],
    "source": [
     "pd.read_json(r.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46d12101",
+   "metadata": {},
+   "source": [
+    "# cURL\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5de8051",
+   "metadata": {},
+   "source": [
+    "curl 'http://127.0.0.1:5000/objects/NMvW_v0/search?object_keywords=maand&object_start_date=&object_end_date=&engine_id=TypicalityEnginev0&engine_min_score=0&engine_max_score=1&vocabulary_terms=bewindhebber%2Cbewindvoerder%2Cbomba%2Cbombay%2Ccimarron%2Cderde%20wereld%2Cdwerg%2Cexpeditie%2Cgouverneur%2Chalfbloed%2Chottentot%2Cinboorling%2Cindiaan%2Cindisch%2Cindo%2Cinheems%2Cinlander%2Cjap%2Cjappen%2Cjappenkampen%2Ckaffer%2Ckaffir%2Ckafir%2Ckoelie%2Ckolonie%2Clagelonenland%2Clandhuis%2Cmarron%2Cmarronage%2Cmissie%2Cmissionaris%2Cmoor%2Cmoors%2Cmoren%2Cmulat%2Coctroon%2Contdekken%2Contdekking%2Contdekkingsreis%2Contwikkelingsland%2Coorspronkelijk%2Coosters%2Copperhoofd%2Cori%C3%ABntaals%2Cpinda%2Cpolitionele%20actie%2Cprimitief%2Cprimitieven%2Cpygmee%2Cras%2Crasch%2Cslaaf%2Cstam%2Cstamhoofd%2Ctraditioneel%2Ctropisch%2Cwesters%2Cwilden%2Czendeling%2Czendelingen%2Czending&object_param_Classification=&object_param_Department=&engine_param_nonce=1&engine_param_redo=False'"
    ]
   }
  ],
