new normalisation for TypicalityEngine

--- a/backend/v0_4/dev.ipynb
+++ b/backend/v0_4/dev.ipynb
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f90a537a",
+   "id": "77e21e7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5b2e0cdb",
+   "id": "62b2765d",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "deee6b36",
+   "id": "6a131ac8",
    "metadata": {},
    "outputs": [
     {
@@ -873,13 +873,13 @@
     "    return (v - np.percentile(v, 100-q))/(np.percentile(v, q) - np.percentile(v, 100-q))\n",
     "\n",
     "\n",
-    "re_normed = norm(unnormed,99.5)"
+    "re_normed = norm(unnormed)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "3377a083",
+   "id": "341ac546",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "1ff6b51d",
+   "id": "e1baad84",
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "fa1a0437",
+   "id": "19fac9dd",
    "metadata": {},
    "outputs": [
     {
