uploading image source

--- a/backend/v0_4/dev.ipynb
+++ b/backend/v0_4/dev.ipynb
@@ -1213,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f745d7c",
+   "id": "cec3dc91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7548d4ee",
+   "id": "2b8bdc2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f2290559",
+   "id": "4ab79e23",
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "dce9f770",
+   "id": "57e41111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a2394bf6",
+   "id": "1ef4ce43",
    "metadata": {},
    "outputs": [
     {
@@ -1298,140 +1298,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "b278d9d9",
+   "execution_count": 36,
+   "id": "1ee86b00",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>thumbnail_URL</th>\n",
-       "      <th>img_URL</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ObjectID</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>https://collectie.wereldculturen.nl/cc/imagepr...</td>\n",
-       "      <td>https://collectie.wereldculturen.nl/cc/imagepr...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1140385</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1140386</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1140388</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1140389</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1153236</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>146694 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                              thumbnail_URL  \\\n",
-       "ObjectID                                                      \n",
-       "2                                                             \n",
-       "5                                                             \n",
-       "8                                                             \n",
-       "9         https://collectie.wereldculturen.nl/cc/imagepr...   \n",
-       "10                                                            \n",
-       "...                                                     ...   \n",
-       "1140385                                                       \n",
-       "1140386                                                       \n",
-       "1140388                                                       \n",
-       "1140389                                                       \n",
-       "1153236                                                       \n",
-       "\n",
-       "                                                    img_URL  \n",
-       "ObjectID                                                     \n",
-       "2                                                            \n",
-       "5                                                            \n",
-       "8                                                            \n",
-       "9         https://collectie.wereldculturen.nl/cc/imagepr...  \n",
-       "10                                                           \n",
-       "...                                                     ...  \n",
-       "1140385                                                      \n",
-       "1140386                                                      \n",
-       "1140388                                                      \n",
-       "1140389                                                      \n",
-       "1153236                                                      \n",
-       "\n",
-       "[146694 rows x 2 columns]"
+       "ObjectID\n",
+       "2                                                           \n",
+       "5                                                           \n",
+       "8                                                           \n",
+       "9          https://collectie.wereldculturen.nl/cc/imagepr...\n",
+       "10                                                          \n",
+       "                                 ...                        \n",
+       "1140385                                                     \n",
+       "1140386                                                     \n",
+       "1140388                                                     \n",
+       "1140389                                                     \n",
+       "1153236                                                     \n",
+       "Name: Thumbnail, Length: 146694, dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "img_df"
+    "img_df.thumbnail_URL.rename(\"Thumbnail\")"
    ]
   }
  ],
